export const snapshot = {};

snapshot[`call-trace debug_traceTransaction 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "<caller>",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace debug_deploy_traceTransaction 1`] = `
{
  from: "<caller>",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "<code>",
  to: "<contract_callee_addr>",
  type: "CREATE",
  value: "0x0",
}
`;

snapshot[`call-trace debug_traceBlock 1`] = `
[
  {
    result: {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000002",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          calls: [
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0x",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
              logs: [
                {
                  address: "<contract_callee_addr>",
                  data: "0x0000000000000000000000000000000000000000000000000000000000000001",
                  position: "0x0",
                  topics: [
                    "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
                  ],
                },
              ],
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x0",
            },
            {
              error: "execution reverted",
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0xd1b96663",
              output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
              revertReason: "This function always fails",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
              to: "<contract_addr>",
              type: "CALL",
              value: "0x0",
            },
          ],
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
              position: "0x1",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
              position: "0x2",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
          ],
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<caller>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
    txHash: "<hash>",
  },
]
`;

snapshot[`call-trace debug_traceCall 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace selfdestruct 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x",
      to: "0x0000000000000000000000000000000000000000",
      type: "SELFDESTRUCT",
      value: "<selfdestruct_value>",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0x2b68b9c6",
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace create_and_destruct 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "<code>",
      output: "0x608060405260043610610037575f3560e01c80632b68b9c614610042578063a329e8de14610058578063d1b96663146100805761003e565b3661003e57005b5f5ffd5b34801561004d575f5ffd5b5061005661008a565b005b348015610063575f5ffd5b5061007e60048036038101906100799190610188565b610091565b005b61008861010f565b005b5f33905080ff5b5f5f90505b600a8110156100d457806040516020016100b091906101d3565b60405160208183030381529060405280519060200120508080600101915050610096565b507fa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f25673608160405161010491906101fc565b60405180910390a150565b5f61014f576040517f08c379a00000000000000000000000000000000000000000000000000000000081526004016101469061026f565b60405180910390fd5b565b5f5ffd5b5f819050919050565b61016781610155565b8114610171575f5ffd5b50565b5f813590506101828161015e565b92915050565b5f6020828403121561019d5761019c610151565b5b5f6101aa84828501610174565b91505092915050565b5f819050919050565b6101cd6101c882610155565b6101b3565b82525050565b5f6101de82846101bc565b60208201915081905092915050565b6101f681610155565b82525050565b5f60208201905061020f5f8301846101ed565b92915050565b5f82825260208201905092915050565b7f546869732066756e6374696f6e20616c77617973206661696c730000000000005f82015250565b5f610259601a83610215565b915061026482610225565b602082019050919050565b5f6020820190508181035f8301526102868161024d565b905091905056fea26469706673582212208e335e5b938e4aa53f0e8b521ec510ee48f8899204eb1b9bfa86917591f5fa3564736f6c634300081e0033",
      to: "<addr>",
      type: "CREATE",
      value: "0x0",
    },
    {
      calls: [
        {
          from: "<addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_addr>",
          type: "SELFDESTRUCT",
          value: "<selfdestruct_value>",
        },
      ],
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x2b68b9c6",
      to: "<addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0xfadbb018",
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`prestate deploy_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate deploy_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate write_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x00000000000000000000000000000000000000000000000000000000000007e9",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167650000000000000000000000000000000000001a",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.diff 1`] = `
{
  post: {
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f66726f6d5f30000000000000000000000028",
      },
    },
  },
  pre: {
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.no_diff 1`] = `
{
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate read_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate read_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
    },
  },
}
`;

snapshot[`prestate deposit.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate deposit.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate withdraw.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate withdraw.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate get_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate get_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate get_external_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate get_external_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<balance>",
  },
}
`;

snapshot[`prestate instantiate_child.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate instantiate_child.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
    "<prestate_contract_child_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_child_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
  },
}
`;

snapshot[`prestate call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.diff 1`] = `
[
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          balance: "<balance>",
          code: "<code>",
          nonce: "<nonce>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
          },
        },
      },
    },
    txHash: "<tx_hash>",
  },
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          balance: "<balance>",
          code: "<code>",
          nonce: "<nonce>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
          },
        },
      },
    },
    txHash: "<tx_hash>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.no_diff 1`] = `
[
  {
    result: {
      "<caller_addr>": {
        balance: "<balance>",
        nonce: "<nonce>",
      },
      "<prestate_contract_addr>": {
        balance: "<balance>",
        code: "<code>",
        nonce: "<nonce>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<tx_hash>",
  },
  {
    result: {
      "<caller_addr>": {
        balance: "<balance>",
        nonce: "<nonce>",
      },
      "<prestate_contract_addr>": {
        balance: "<balance>",
        code: "<code>",
        nonce: "<nonce>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002d",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<tx_hash>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
    },
  },
}
`;

snapshot[`prestate selfdestruct.diff 1`] = `
{
  post: {},
  pre: {
    "<tracing_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate selfdestruct.no_diff 1`] = `
{
  "<tracing_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate create_and_destruct.diff 1`] = `
{
  post: {
    "<tracing_contract_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<tracing_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate create_and_destruct.no_diff 1`] = `
{
  "<tracing_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;
